--- a/po/extra/extra.pot
+++ b/po/extra/extra.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: extra\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-18 08:21+0400\n"
+"POT-Creation-Date: 2019-02-20 01:43+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,11 +24,13 @@ msgid "Places Indicator"
 msgstr ""
 
 #: data/com.github.camellan.placesindicator.appdata.xml.in:8
-msgid "A GTK3 Menu Places Folder Indicator"
+msgid "A GTK3 based indicator for quick access to folders"
 msgstr ""
 
 #: data/com.github.camellan.placesindicator.appdata.xml.in:10
-msgid "Quick access to Your Bookmarks in File manager."
+msgid ""
+"A simple indicator, which gives fast access to the default folder and custom "
+"bookmarks, a File Manager in the Wingpanel."
 msgstr ""
 
 #: data/com.github.camellan.placesindicator.appdata.xml.in:32
@@ -36,7 +38,7 @@ msgid "Andrey Kultyapov"
 msgstr ""
 
 #: data/com.github.camellan.placesindicator.desktop.in:5
-msgid "Quick access to Your Bookmarks in File manager"
+msgid "Quick access to the default folder and custom bookmarks File Manager"
 msgstr ""
 
 #: data/com.github.camellan.placesindicator.desktop.in:8
