--- a/po/extra/ru.po
+++ b/po/extra/ru.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: extra\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-18 08:21+0400\n"
-"PO-Revision-Date: 2019-02-18 08:17+0400\n"
+"POT-Creation-Date: 2019-02-20 01:43+0400\n"
+"PO-Revision-Date: 2019-02-20 01:45+0400\n"
 "Last-Translator: Andrey Kultyapov <camellan@yandex.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -26,21 +26,33 @@ msgid "Places Indicator"
 msgstr "Places Indicator"
 
 #: data/com.github.camellan.placesindicator.appdata.xml.in:8
-msgid "A GTK3 Menu Places Folder Indicator"
-msgstr "A GTK3 Menu Places Folder Indicator"
+msgid "A GTK3 based indicator for quick access to folders"
+msgstr "Индикатор на основе GTK3 для быстрого доступа к папкам"
 
 #: data/com.github.camellan.placesindicator.appdata.xml.in:10
-msgid "Quick access to Your Bookmarks in File manager."
-msgstr "Быстрый доступ к вашим закладкам  диспетчера файлов."
+msgid ""
+"A simple indicator, which gives fast access to the default folder and custom "
+"bookmarks, a File Manager in the Wingpanel."
+msgstr ""
+"Простой индикатор, открывающий быстрый доступ к стандартным папкам и "
+"пользовательским закладкам файлового менеджера прямо из Wingpanel."
 
 #: data/com.github.camellan.placesindicator.appdata.xml.in:32
 msgid "Andrey Kultyapov"
 msgstr "Андрей Культяпов"
 
 #: data/com.github.camellan.placesindicator.desktop.in:5
-msgid "Quick access to Your Bookmarks in File manager"
-msgstr "Быстрый доступ к вашим закладкам  диспетчера файлов"
+msgid "Quick access to the default folder and custom bookmarks File Manager"
+msgstr ""
+"Быстрый доступ к стандартным папкам и пользовательским закладкам файлового "
+"менеджера"
 
 #: data/com.github.camellan.placesindicator.desktop.in:8
 msgid "com.github.camellan.placesindicator"
 msgstr "com.github.camellan.placesindicator"
+
+#~ msgid "A GTK3 Menu Places Folder Indicator"
+#~ msgstr "A GTK3 Menu Places Folder Indicator"
+
+#~ msgid "Quick access to Your Bookmarks in File manager."
+#~ msgstr "Быстрый доступ к вашим закладкам  диспетчера файлов."
